Configurando relatorios com Allure

--- a/rocklov/cucumber.yml
+++ b/rocklov/cucumber.yml
@@ -1,5 +1,6 @@
 ---
-default: --publish-quiet -p bdd -p html
+default: --publish-quiet -p bdd -p allure
 bdd: -f pretty
 dots: -f progress
 html: -f html -o logs/report.html
+allure: --format AllureCucumber::CucumberFormatter --out=logs
