Executando testes em outros ambientes

--- a/rocklov/cucumber.yml
+++ b/rocklov/cucumber.yml
@@ -1,6 +1,8 @@
 ---
-default: --publish-quiet -p bdd -p allure
+default: --publish-quiet -p bdd -p allure -p local
 bdd: -f pretty
 dots: -f progress
 html: -f html -o logs/report.html
 allure: --format AllureCucumber::CucumberFormatter --out=logs
+local: CONFIG=local.yml
+hmg: CONFIG=hmg.yml
