--- a/rocklov/api/Gemfile
+++ b/rocklov/api/Gemfile
@@ -3,3 +3,4 @@ source "https://rubygems.org"
 gem 'rspec', '3.10'
 gem 'httparty', '0.18.1'
 gem 'mongo', '2.13.1'
+gem 'rspec_junit_formatter', '0.4.1'
